Fix stream cell alignment

--- a/src/sentry/static/sentry/less/sentry.less
+++ b/src/sentry/static/sentry/less/sentry.less
@@ -1259,6 +1259,7 @@ a.icon-share {
   box-shadow: 0 1px 0 rgba(52, 60, 69, .08);
   margin-left: -20px;
   margin-right: -20px;
+  padding-right: 10px;
 
   .btn-group > .btn {
     color: inherit;
@@ -1568,6 +1569,7 @@ a.icon-share {
     position: relative;
     border-bottom: 1px solid rgba(52, 60, 69, .08);
     margin: 0;
+    padding-right: 10px;
 
     .icon-bookmark {
       display: none;
@@ -1727,7 +1729,6 @@ a.icon-share {
     padding-top: 33px;
     span {
       font-size: 18px;
-      padding: 3px 4px;
       .transition(all linear .3s);
 
       &.ng-update {
